fix: alignment and spacing in side bar modals
see trello card for details

fixes issue 7607

--- a/src/app/cdk/side-bar/modals/modal-country/modal-country.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-country/modal-country.component.scss
@@ -20,7 +20,8 @@
     margin-top: 6px;
     cursor: move;
     z-index: 1;
-    margin-inline-end: 18px;
+    margin-inline-start: 6px;
+    margin-inline-end: 10px;
   }
 }
 
