--- a/src/app/cdk/side-bar/modals/modal-websites/modal-websites.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-websites/modal-websites.component.scss
@@ -37,10 +37,14 @@
 
 .websites-input-line {
   .image-container {
-    height: 100%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    img {
+      margin-inline-start: 6px;
+      margin-inline-end: 10px
+    }
   }
 
   .input-container {
